Fixed MD tables on mobile and centered title on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -129,10 +129,13 @@ body {
 table {
   border-collapse: collapse;
   margin: 25px 0;
-  min-width: 400px;
+  // min-width: 400px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
   display: block;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
   overflow-x: auto;
+  white-space: nowrap;
 }
 
 th,
